config/network-policies/deny/argocd.yaml
# Default Deny Ingress - argocd
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: argocd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
