config/network-policies/deny/cert-manager.yaml
# Default Deny Ingress - cert-manager
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cert-manager
spec:
  podSelector: {}
  policyTypes:
    - Ingress
