config/network-policies/deny/external-dns.yaml
# Default Deny Ingress - external-dns
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: external-dns
spec:
  podSelector: {}
  policyTypes:
    - Ingress
