config/network-policies/deny/kyverno.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyverno-deny-all
  namespace: kyverno
  labels:
    app.kubernetes.io/name: kyverno
    policy-type: deny-by-default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
