config/network-policies/deny/litmus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: litmus
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
