config/network-policies/deny/longhorn-system.yaml
# Default Deny Ingress - longhorn-system
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
