config/network-policies/deny/secrets.yaml
# Default Deny Ingress - secrets
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: secrets
spec:
  podSelector: {}
  policyTypes:
    - Ingress
