config/network-policies/deny/tracing.yaml
# Default Deny Ingress - tracing
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: tracing
spec:
  podSelector: {}
  policyTypes:
    - Ingress
