config/network-policies/deny/uptime.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: uptime
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
